tests/spec/parse/snapshots/generic_multiple_unbounded.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn pair<T, U>(x: T, y: U) -> (T, U) {
    return (x, y);
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "pair",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 9,
                    byte_length: 1,
                },
            },
            Generic {
                name: "U",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 1,
                },
            },
        ],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 15,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 18,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "y",
                    span: Span {
                        file_id: 0,
                        byte_offset: 21,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "U",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 24,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Tuple {
            elements: [
                Constructor {
                    name: "T",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 31,
                        byte_length: 1,
                    },
                },
                Constructor {
                    name: "U",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 34,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 30,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Tuple {
                            elements: [
                                Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 49,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                Identifier {
                                    value: "y",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 52,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 48,
                                byte_length: 6,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 41,
                            byte_length: 13,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 37,
                    byte_length: 20,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 56,
        },
    },
]
