tests/spec/parse/snapshots/generic_single_bound.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn display<T: Display>(value: T) -> string {
    return "displayed";
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "display",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 7,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [
                    Constructor {
                        name: "Display",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 7,
                        },
                    },
                ],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 10,
                },
            },
        ],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "value",
                    span: Span {
                        file_id: 0,
                        byte_offset: 24,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 37,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Literal {
                            literal: String {
                                value: "displayed",
                                raw: false,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 55,
                                byte_length: 11,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 48,
                            byte_length: 18,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 44,
                    byte_length: 25,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 68,
        },
    },
]
