tests/spec/parse/snapshots/generic_single_unbounded.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn identity<T>(x: T) -> T {
    return x;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "identity",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 8,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 13,
                    byte_length: 1,
                },
            },
        ],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "T",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 25,
                byte_length: 1,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 8,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 15,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 41,
        },
    },
]
