tests/spec/parse/snapshots/generic_struct_instantiation.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Container<T> { value: T }
  fn test() {
    let x = 42;
    let c: Container<int> = Container { value: x };
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Container",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 9,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 1,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 23,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 30,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 37,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 52,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 42,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 56,
                                byte_length: 2,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 48,
                            byte_length: 10,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "c",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 66,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: Some(
                                Constructor {
                                    name: "Container",
                                    params: [
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 79,
                                                byte_length: 3,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 69,
                                        byte_length: 14,
                                    },
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Container",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "value",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 98,
                                        byte_length: 5,
                                    },
                                    value: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 105,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                            ],
                            spread: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 86,
                                byte_length: 22,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 62,
                            byte_length: 46,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 44,
                    byte_length: 67,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 34,
            byte_length: 77,
        },
    },
]
